fix:优化群管理页面布局